--- a/surveys/src/locales/ar.json
+++ b/surveys/src/locales/ar.json
@@ -1,59 +1,53 @@
 {
   "translation": {
-    "Works with the team to gather the necessary information about the problem.": "يعمل مع الفريق لجمع المعلومات اللازمة حول المشكلة",
-    "Benefits from the expertise of subordinates in analyzing alternatives to reach appropriate solutions.": "يستفيد من خبرات المروؤسين في تحليل البدائل للوصول الي الحلول المناسبة",
-    "Presents multiple alternatives to the team to choose the best for solving the problem.": "يطرح للفريق بدائل متعددة لاختيار افضلها لحل المشكلة",
-    "Involves the team in decision-making based on the desired objectives.": "يشرك فريق العمل في اتخاذ القرار بناء على الأهداف المرغوب تحقيقها",
-    "Encourages subordinates about the importance of their participation in decision-making.": "يقوم بحث المروؤسين بأهمية مشاركتهم في اتخاذ القرارات",
-    "Establishes a clear mechanism to regulate the participation of subordinates in decision-making.": "يضع آلية واضحة لضبط مشاركة المروؤسين في اتخاذ القرارات",
-    "Possesses the necessary skills in solving problems related to decisions.": "يمتلك المهارات اللازمة في حل المشكلات المتعلقة بالقرار,",
-    "Encourages the active participation of subordinates in decision-making.": "يشجع مشاركة المروؤسين الفعالة في اتخاذ القرارات",
-    "Involves the participation of subordinates in solving problems facing the work.": "يشرك المروؤسين في حل المشكلات التي تواجه العمل",
-    "Classifies information with the team according to its importance to the problem under decision.": "يصنف مع الفريق المعلومات حسب أهميتها للمشكله محل القرار",
-
-    "Commits to communication that supports human relations between him and the subordinates in the organization.": "يلتزم بالاتصال الذي يدعم العلاقات الإنسانية بينه و بين المروؤسين في المنظمة",
-    "Chooses the appropriate means of communication to achieve the organization’s goals.": "يختار وسيلة الاتصال المناسبه لتحقيق اهداف المنظمة",
-    "Uses multiple means of communication with subordinates.": "يستخدم وسائل متعددة للاتصال مع المروؤسين",
-    "Follows clear communication to facilitate the flow of information and help improve performance efficiency.": "نتبع الاتصالات الواضحة لتسهيل انسياب المعلومات للمساعدة في رفع كفاءة الأداء",
-    "Uses modern communication tools in defining performance indicators in the organization.": "يستخدم الاتصالات الحديثة في تحديد مؤشرات الأداء في المنظمة",
-    "Ensures quick communication with the team to make timely decisions.": "يحرص على الاتصال السريع مع فريق العمل لاتخاذ القرار في الوقت المناسب",
-    "Avoids traditional communication lines that hinder the completion of work in the organization.": "يتجنب خطوط الاتصال التقليدية التي تعرقل انجاز العمل في المنظمة",
-    "Relies on modern communication methods when issuing directives.": "يعتمد في اصدار التوجيهات على وسائل تواصل حديثة",
-    "Activates an appropriate communication system that enables understanding of the message between the sender and the receiver.": "يفعل نظام الاتصال المناسب الذي مكن من فهم الرسالة بين المراسل و المستقبل",
-    "Commits to effective communication channels that support the smooth transfer of information quickly.": "يلتزم بقنوات اتصال فعالة تساعد على انسيابية انتقال المعلومات بطريقة سريعة",
-
-    "Provides verbal praise to motivate subordinates’ behavior": "يقدم عبارات الثناء الشفوية لتحريك سلوك المروؤسين",
-    "Grants financial and moral incentives to enhance employees’ performance efficiency": "يمنح حوافز مادية و معنوية لرفع كفاءة أداء العاملين",
-    "Motivates subordinates immediately after completing the required work": "يحفز المرؤوسين فور الانتهاء من العمل المطلوب",
-    "Provides incentives that match the level of performance": "يقدم الحافز الذي يتناسب مع الأداء",
-    "Considers the suitability of incentives to the needs of subordinates": "يراعي مناسبة الحافز لحاجات المرؤوسين",
-    "Avoids negative incentives such as punishment and deductions": "يتجنب الحوافز السلبية كعقاب و الخصم",
-    "Maintains fairness among subordinates in granting incentives": "يعدل بين المرؤوسين في منح الحوافز",
-    "Utilizes motivation as an effective tool to achieve obedience and loyalty from subordinates": "يستغل التحفيز كاداة فعاله لتحقيق الطاعة و الولاء من قبل المرؤوسين",
-    "Strives to create a competitive atmosphere among subordinates through motivation": "يحرص على خلق جو من التنافس بالتحفيز بين المؤوسين",
-    "Has the ability to ensure that penalties are proportional to the incorrect behavior of subordinates": "يمتلك القدرة على ان يكون الجزاء متكافئا مع السلوك الخطأ الصادر من المرؤوسين",
-
-    "Possesses multiple skills to manage conflicts among subordinates": "يمتلك مهارات متعددة لإدارة الصراع بين المرؤوسين",
-    "Informs subordinates about the factors causing conflict in order to avoid them": "يطلع المرؤوسين على العوامل المسببة للصراع لتفاديها",
-    "Helps subordinates solve the problems they face": "يساعد المرؤوسين على حل المشكلات التي تواجههم",
-    "Directs subordinates’ goals to reduce conflict": "يوجه اهداف المرؤوسين ليقلل من الصراع",
-    "Convinces conflicting parties to make concessions when the conflict escalates": "يقنع برأيه الأطراف المتنازعة لتقديم تنازلات عندما يشد الصراع",
-    "Is capable of resolving disputes among conflicting parties in the organization": "قادر على حل مشكلة الأطراف المتنازعة في المنظمة",
-    "Applies regulations and policies to limit conflicts between subordinates": "يطبق اللوائح و الأنظمة للحد من الصراع بين المرؤوسين",
-    "Pays attention to the complaints of conflicting parties": "يهتم بشكاوي الأطراف المتنازعة",
-    "Collaborates with subordinates to reach acceptable decisions for resolving conflicts": "يتعاون مع المرؤوسين للوصول الي قرارات مقبولة لحل الصراع للجميع",
-    "Encourages a give-and-take policy to reach compromise solutions": "يشجع سياسة الاخذ و العطاء للتوصل الى حلول وسط",
-
-    "Holds meetings for important matters, not for administrative display": "يعقد الاجتماعات للامور الهامة و ليست للاستعراض الإداري",
-    "Defines the purpose of the meeting with precision and clarity": "يحدد خدف الاجتماع بكل دقة و وضوح",
-    "Provides subordinates with the meeting agenda well in advance": "يزود المرؤوسين بجدول اعمال الاجتماع قبل الاجتماع بوقت كافي",
-    "Ensures the preparation and documentation of meeting minutes": "يحرص على اعداد و كتابة محضر الاجتماع",
-    "Ensures the necessary environment is provided for the meeting room": "يحرص على توفير البيئة اللازمة لقاعة الاجتماعات",
-    "Possesses multiple skills for managing meetings": "يمتلك مهارات متعددة لادارة الاجتماع",
-    "Gives all subordinates the freedom to express their opinions during the meeting": "يعطى الحرية لجميع المرؤوسين لطرح آرائهم اثناء الاجتماع",
-    "Engages with subordinates’ opinions during the meeting": "يتفاعل مع آراء المرؤوسين اثناء الاجتماع",
-    "Requests members to present their views in writing": "يطلب من الأعضاء إبداء مرئياتهم كتابة",
-    "Emphasizes distributing the meeting minutes to participants after it has been read": "يؤكد على توٍيع المشاركين على محضر الاجتماع بعد قرائته",
+    "I cannot solve the tasks assigned to me.": "لا أستطيع حل المشكلات المسندة لي .",
+    "My job responsibilities and duties are unclear.": "مسئوليات ومهام عملى غير واضحة .",
+    "I feel useless and unable to do anything.": "أشعر أننى مفيد ولا أستطيع عمل شئ .",
+    "My colleagues hinder my ability to work.": "يعيق زملائى قدرتى على العمل .",
+    "My work interferes with my personal life.": "يتداخل عملى مع حياتى الخاصة .",
+    "I have little to do in my job.": "لدى القليل لأقوم به فى عملي .",
+    "I don’t know whether what I do at work is right or wrong.": "لا أعلم إذا كان ما أقوم به فى عملى صواب أم خطأ .",
+    "Supervisors overload me with tasks.": "يكثر المشرفون من نقدمهم لي .",
+    "I am isolated from others.": "أنا منعزل عن الآخرين .",
+    "Work rules change constantly.": "تتغير قواعد العمل بصورة مستمرة .",
+    "My job is not satisfying to me.": "عملى غير مرضي لي .",
+    "My job requires me to compromise some of my values and principles.": "يتطلب عمل التغاطي عن بعض مبادئ وقيمى .",
+    "I am in my job unwillingly and have no other choice.": "أنا موجود بعملى على غير رغبتي وليس لي خيار آخر .",
+    "I don’t have the necessary information to perform well.": "لا أمتلك المعلومات اللازمة لأؤدى عملاً جيداً .",
+    "My work requires meeting conflicting demands and orders.": "يتطلب عملى تلبية مطالب وأوامر متعارضة .",
+    "Work management shows favoritism and bias towards some people.": "تظهر إدارة العمل المحسوبية والمحاباة للبعض .",
+    "I have far too much to accomplish in too little time.": "لدي الكثير جداً لأؤديه في وقت قليل .",
+    "I believe my qualifications exceed the work I perform.": "أرى أن مؤهلاتي تفوق العمل الذى أؤديه .",
+    "Supervisors do not provide me with evaluations of my work.": "لا يقدم لي المسئولون تقييماً لعملي .",
+    "Others receive incentives for the work I do myself.": "ينال الآخرون حوافز على ما أقوم به أنا من عمل .",
+    "I feel like just a cog in the wheel of the organization I work for.": "أرى أننى مجرد ترس في عجلة الهيئة التى أعمل بها .",
+    "I don’t know exactly what is required of me at work.": "لا أعرف بالضبط ما هو المطلوب منى في العمل .",
+    "I have few real successes.": "لدي القليل من النجاحات الحقيقية .",
+    "Many people do not approve of my work.": "لا يوافق كثير من الناس على عملي .",
+    "I am unable to influence decisions related to me.": "أنا غير قادر على التأثير على القرارات المتعلقة بي .",
+    "Those I work with do not understand my role at work.": "من أعمل معهم لا يفهمون دوري في العمل .",
+    "I disagree with those I work with.": "أختلف مع من أعمل معهم .",
+    "Administrative policies conflict with my good performance.": "تتعارض السياسات الإدارية مع حسن أدائى .",
+    "I am forced to work during my personal time.": "أضطر للعمل في أوقاتي الخاصة .",
+    "My work is not difficult.": "عملي ليس صعباً .",
+    "I receive the information I need to work on too late.": "أحصل على المعلومات التى أعمل بناء عليها متأخراً جداً .",
+    "My work is unappreciated.": "عملي غير مقدر .",
+    "I share few common traits with those I work with.": "أنا متفق مع من أعمل معهم فى قليل من الخصائص .",
+    "There is no relationship between performance and success in my work.": "لا توجد علاقة بين الأداء والنجاح فى عملي .",
+    "My professional progress is less than I desire.": "تقدمى المهني ليس بالقدر الذي أتمناه .",
+    "I do not trust the institution I work for.": "لا أثق بالمؤسسة التى أعمل بها .",
+    "I may be dismissed from my job and I cannot do anything about it.": "ربما أتعرض للفصل من عملي ولا أستطيع القيام بشئ .",
+    "I don’t know the purpose of my work.": "لا أعرف الهدف من عملى .",
+    "I am forced to break some procedures to be able to perform my work.": "أضطر لمخالفة بعض الإجراءات لأتمكن من أداء عملى .",
+    "Competition among individuals outweighs cooperation.": "يغلب وجود المنافسة بين الأفراد على التعاون بينهم في .",
+    "My workload is overwhelming.": "أعباء عملي هائلة .",
+    "Most of my time is consumed by routine work.": "معظم وقتي أستهلكته في عمل روتيني .",
+    "I do not get to know the final results of my work.": "لا أتعرف على النتائج النهائية لعملي .",
+    "I am blamed at work for others’ mistakes.": "يلومونني في العمل على أخطاء غيري .",
+    "I avoid telling people about the nature or place of my work.": "أتجنب إخبار الناس عن طبيعة عملي أو مكانه .",
+    "My work priorities are unclear.": "أولويات عملي غير واضحة .",
+    "I am not respected at work.": "لا أحظى بالإحترام في العمل .",
+    "My heart is not in my work.": "قلبي ليس على عملي .",
     "Never": "أبداً",
     "A Few Times per Year": "بضع مرات في السنة",
     "Once a Month": "مرة واحدة في الشهر",
@@ -85,6 +79,15 @@
     "Conflict Management Skills": "مهارات إدارة الصراع",
     "Score": "النتيجة",
     "(High)": "(مرتفع)",
-    "(Low)": "(منخفض)"
+    "(Low)": "(منخفض)",
+    "Never applies": "لا تنطبق أًبداً",
+    "Rarely applies": "تنطبق نادراً",
+    "Often applies": "تنطبق غالباً",
+    "Always applies": "تنطبق دائماً",
+    "Overall Result": "النتيجة الإجمالية",
+    "High level of professional stress": "مستوى عالٍ من الضغط المهني",
+    "Moderate level of professional stress": "مستوى معتدل من الضغط المهني",
+    "Low level of professional stress": "مستوى منخفض من الضغط المهني",
+    "Professional Stress Scale": "مقياس الضغط المهني"
   }
 }
